--- a/index.html
+++ b/index.html
@@ -4,15 +4,22 @@
 <head>
   <meta charset="utf-8">
   <title>Elaine Chan's Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src= "images/IMG_3400.jpg" width="300" height="400" alt="Elaine Profile Picture"></td>
-      <td><h1> Elaine Chan </h1>
-      <p><em>Business Analyst and Quality Assurance with <strong><a href="http://www.bridgephase.com/">Bridgephase</a></strong>.</em></p>
-      <p> I am a business analyst/ consultant in Washington, DC. I love coffee, traveling, and spending time with my family and friends. My favorite place that I have travelled thus far is Spain and Portugal. The food was some of the best I have ever had. </p></td>
+      <td>
+        <img src="images/img_3400.jpg" width="200" height="300" alt="Elaine Profile Picture">
+      </td>
+      <td>
+        <h1>Elaine Chan</h1>
+        <p><em>Business Analyst at <strong><a href="http://www.bridgephase.com/">Bridgephase</a></strong>.</em></p>
+        <p>I am a business analyst/ consultant in Washington, DC. I love coffee, traveling, and spending time with my family and friends. My favorite place that I have travelled thus far is Spain and Portugal. The food was some of the best I have
+          ever had.</p>
+      </td>
     </tr>
   </table>
   <hr>
@@ -53,27 +60,36 @@
   </table>
   <hr>
   <h3>Skills</h3>
-<table cellspacing="10">
-  <tr>
-    <td>Coding</td>
-    <td>⭐</td>
-  </tr>
-  <tr>
-    <td>Cooking</td>
-    <td>⭐⭐⭐</td>
-  </tr>
-  <tr>
-    <td>Research Development</td>
-    <td>⭐⭐⭐⭐</td>
-  </tr>
-  <tr>
-    <td>Program Management</td>
-    <td>⭐⭐⭐⭐</td>
-  </tr>
-</table>
+  <table cellspacing="10">
+    <tr>
+      <td>Coding</td>
+      <td>⭐</td>
+    </tr>
+    <tr>
+      <td>Agile Process</td>
+      <td>⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>Cooking</td>
+      <td>⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>Business Analyst</td>
+      <td>⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>Research Development</td>
+      <td>⭐⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>Program Management</td>
+      <td>⭐⭐⭐⭐</td>
+    </tr>
+  </table>
   <hr>
   <a href="hobbies.html">My Hobbies</a>
   <br>
   <a href="contact-me.html">Contact Me</a>
 </body>
+
 </html>
